fix: Update to jQuery accordion as items not collapsing individually.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -10,4 +10,11 @@
   #flash{
     margin-bottom: 0rem;
   }
+
+/* goals.html template */
+/* update jQuery accordion font and alignment */
+  .ui-widget {
+    font-family: unset;
+    text-align: left;
+  }
  
